# server/src/build/swagger.json
@@ -82,7 +82,7 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/": {
+		"/api/index": {
 			"get": {
 				"operationId": "Index",
 				"responses": {
@@ -109,9 +109,36 @@
 				"parameters": []
 			}
 		},
-		"/msg": {
+		"/api/index/msg": {
 			"get": {
 				"operationId": "Msg",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"msg": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"msg"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/api/logger": {
+			"get": {
+				"operationId": "Index",
 				"responses": {
 					"200": {
 						"description": "Ok",
