# server/src/controllers/logger.controller.ts
@@ -1,0 +1,19 @@
+import { Controller, Get, Route } from 'tsoa'
+
+import Logger from '../utils/logger'
+import {provideSingleton} from "../utils/provideSingleton";
+
+@Route('api/logger')
+@provideSingleton(LoggerController)
+export class LoggerController extends Controller {
+  @Get('/')
+  public async index() {
+    Logger.error("This is an error log");
+    Logger.warn("This is a warn log");
+    Logger.info("This is a info log");
+    Logger.http("This is a http log");
+    Logger.debug("This is a debug log");
+
+    return { msg: 'Hello World!'}
+  }
+}
